--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -16,6 +16,7 @@ h1 {
     width:100%;
     height:100vh;
     float:left;
+    text-align: center;
 }
 
 ul {
@@ -36,6 +37,15 @@ section {
 }
 section:nth-child(odd) { background: white; height: 100%;}
 
+ul.mountain_list {
+    -moz-column-count: 3;
+    -moz-column-gap: 20px;
+    -webkit-column-count: 3;
+    -webkit-column-gap: 20px;
+    column-count: 3;
+    column-gap: 20px;
+
+}
 
 nav {
   background: black;
@@ -51,6 +61,7 @@ nav {
   top: 0;
   left: 0;
   z-index:5;
+  text-align: center;
 }
 nav a {
   color: white;
@@ -76,6 +87,18 @@ nav:hover { opacity: 1; }
   width:100%;
   position:relative;
   //margin:5% auto 0;
+}
+
+
+//variables for the mountain section multi column
+.container{
+  width:100%;
+}
+
+.col{
+  float:left; 
+  width:33%;
+  padding:2px;
 }
 
 /**
@@ -290,3 +313,94 @@ h1{
   background-image:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/163697/slide-3.jpg);
  }
 
+ .greeting{
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index:0;
+  width:100%;
+  padding-top: 32%;
+  background-image:url("../media/ski_site_resources/okemo_chairlift.jpg");
+ }
+
+
+
+
+
+//Modal stuff--------------
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+//CSS3 animation stuff:
+.trickyP {
+  animation-duration: 1s;
+  animation-name: slidein;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+
+//vertically align
+.vid_div {
+    position:relative;
+    height:100%;
+    
+}
+video {
+    position:absolute;
+    top:0;
+    bottom:0;
+    margin:auto;
+    left:0; 
+    right:0;
+}
+.video {
+    min-height:50px
+}
