--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -24,6 +24,15 @@ ul {
   margin-left: 25px;
 }
 
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+  -mox-border-radius: $radius;
+  border-radius: $radius;  
+}
+
+.box { @include border-radius(10px);}
+
 li {
   display: inline-block;
   margin-right: 10px;
